/**
 * Copyright 2020 Huawei Technologies Co., Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package mindspore.dataset;
option cc_enable_arenas = true;

message PipelineWorkerEpochSummary {
  int32 pipeline = 1;
  int32 worker = 2;
  int64 min = 3;
  int64 max = 4;
  int64 avg = 5;
  int64 med = 6;
  int64 cnt = 7;
  int64 elapse = 8;
}

message EpochDone {
  int32 pipeline = 1;
}

message ErrorMsg {
  int32 rc = 1;
  string msg = 2;
}
